// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logger/config-serializer redacts sensitive fields 1`] = `
Object {
  "githubAppKey": "***********",
  "nottoken": "b",
  "token": "***********",
}
`;

exports[`logger/config-serializer replaces functions 1`] = `
Object {
  "api": "[Function]",
  "logger": "[Function]",
  "nottoken": "b",
}
`;

exports[`logger/config-serializer squashes templates 1`] = `
Object {
  "api": "[Function]",
  "nottoken": "b",
  "prBody": "[Template]",
}
`;
